--- a/requirements.txt
+++ b/requirements.txt
@@ -1,468 +1,21 @@
-absl-py>=1.4.0
-accelerate>=1.6.0
-aiofiles>=24.1.0
-aiohappyeyeballs>=2.6.1
-aiohttp>=3.11.18
-aiohttp-cors>=0.8.1
-aiosignal>=1.3.1
-annotated-types>=0.7.0
-antlr4-python3-runtime>=4.9.3
-anyio>=3.7.1
-apturl>=0.5.2
-argbind>=0.3.9
-argon2-cffi>=23.1.0
-argon2-cffi-bindings>=21.2.0
-arrow>=1.2.3
-astor>=0.8.1
-asttokens>=2.4.0
-astunparse>=1.6.3
-async-lru>=2.0.4
-async-timeout>=4.0.3
-attrs>=23.1.0
-audioread>=3.0.0
-autopep8>=2.3.2
-Babel>=2.12.1
-backcall>=0.2.0
+joblib>=1.5.1
+regex>=2024.11.6
 backoff>=2.2.1
-bcrypt>=3.2.0
-beautifulsoup4>=4.12.2
-bitsandbytes>=0.45.5
-blake3>=1.0.4
-bleach>=6.0.0
-blinker>=1.9.0
-blis>=1.3.0
-boto3>=1.38.5
-botocore>=1.38.5
-box2d-py>=2.3.5
-Brlapi>=0.8.3
-cachelib>=0.10.2
-cachetools>=5.3.1
-captum>=0.6.0
-catalogue>=2.0.9
-certifi>=2020.6.20
-cffi>=1.15.1
-chardet>=4.0.0
-charset-normalizer>=3.2.0
-click>=8.1.7
-cloudflare>=2.19.2
-cloudpathlib>=0.21.0
-cloudpickle>=2.2.1
-cmake>=3.27.4.1
-colorama>=0.4.4
-coloredlogs>=15.0.1
-colorful>=0.5.6
-comm>=0.1.4
-command-not-found>=0.3
-compressed-tensors>=0.9.3
-confection>=0.1.3
-conllu>=6.0.0
-contourpy>=1.1.0
-cryptography>=3.4.8
-cupshelpers>=1.0
-cupy-cuda12x>=13.4.1
-cycler>=0.11.0
-cymem>=2.0.7
-Cython>=3.0.2
-dataclasses-json>=0.6.1
-datasets>=3.5.1
-dbus-python>=1.2.18
-debugpy>=1.7.0
-decorator>=5.1.1
-deepspeed>=0.15.4
-defer>=1.0.6
-defusedxml>=0.7.1
-Deprecated>=1.2.18
-depyf>=0.18.0
-device-smi>=0.4.1
-diffusers>=0.33.1
-dill>=0.3.8
-diskcache>=5.6.3
-Distance>=0.1.3
-distlib>=0.3.9
-distro>=1.7.0
-distro-info>=1.1+ubuntu0.2
-dnspython>=2.7.0
-docker>=7.1.0
-docker-pycreds>=0.4.0
-docstring_parser>=0.16
-duplicity>=0.8.21
-einops>=0.8.0
-email_validator>=2.2.0
-et-xmlfile>=1.1.0
-exceptiongroup>=1.1.3
-executing>=1.2.0
-faiss-cpu>=1.11.0
-fastapi>=0.115.12
-fastapi-cli>=0.0.7
-fasteners>=0.14.1
-fastjsonschema>=2.18.0
-fastrlock>=0.8.3
-ffmpy>=0.5.0
-filelock>=3.18.0
-fire>=0.7.0
-flash-attn>=2.7.2.post1
-Flask>=3.1.0
-Flask-Session>=0.5.0
-flatbuffers>=24.3.25
-flatten-dict>=0.4.2
-fonttools>=4.42.1
-fqdn>=1.5.1
-frozenlist>=1.4.0
-fsspec>=2023.6.0
-future>=0.18.2
-g2p-en>=2.1.0
-gast>=0.6.0
-gguf>=0.16.2
-gitdb>=4.0.11
-GitPython>=3.1.43
-google-api-core>=2.24.2
-google-auth>=2.22.0
-google-auth-oauthlib>=1.0.0
-google-pasta>=0.2.0
+openai>=1.86.0
 google-search-results>=2.4.2
-googleapis-common-protos>=1.70.0
-gradio>=5.27.1
-gradio_client>=1.9.1
-greenlet>=2.0.2
-groovy>=0.1.2
-grpcio>=1.58.0
+ollama>=0.5.1
+ujson>=5.10.0
+datasets>=3.6.0
+ijson>=3.4.0
+seaborn>=0.13.2
+nltk>=3.9.1
+dotenv>=0.9.9
+networkx>=3.5
+scikit-learn>=1.7.0
 gym>=0.26.2
-gym-notices>=0.0.8
-h11>=0.14.0
-h5py>=3.12.1
-hf-xet>=1.1.0
-hf_transfer>=0.1.9
-hjson>=3.1.0
-httpcore>=1.0.6
-httplib2>=0.20.2
-httptools>=0.6.4
-httpx>=0.27.2
-huggingface-hub>=0.30.2
-humanfriendly>=10.0
-idna>=3.3
-ijson>=3.2.3
-imageio>=2.37.0
-imageio-ffmpeg>=0.6.0
-importlib_metadata>=8.0.0
-importlib_resources>=6.5.2
-inflect>=7.0.0
-iniconfig>=2.1.0
-interegular>=0.3.3
-ipykernel>=6.25.2
-ipython>=8.15.0
-ipython-genutils>=0.2.0
-ipywidgets>=8.1.0
-isoduration>=20.11.0
-itsdangerous>=2.2.0
-jedi>=0.19.0
-jeepney>=0.7.1
-Jinja2>=3.1.6
-jiter>=0.9.0
-jmespath>=1.0.1
-joblib>=1.5.0
-json5>=0.9.14
-jsonlines>=4.0.0
-jsonpatch>=1.33
-jsonpointer>=2.4
-jsonref>=1.1.0
-jsonschema>=4.23.0
-jsonschema-specifications>=2023.7.1
-julius>=0.2.7
-keras>=3.6.0
-keyring>=23.5.0
-kiwisolver>=1.4.5
-langchain>=0.3.24
-langchain-core>=0.3.56
-langchain-text-splitters>=0.3.8
-langchainhub>=0.1.13
-langcodes>=3.3.0
-langsmith>=0.1.139
-language-selector>=0.1
-lark>=1.2.2
-launchpadlib>=1.10.16
-lazr.restfulclient>=0.14.4
-lazr.uri>=1.0.6
-lazy_loader>=0.3
-libclang>=18.1.1
-librosa>=0.11.0
-liger_kernel>=0.5.2
-lit>=16.0.6
-litellm>=1.70.0
-llguidance>=0.7.19
-llvmlite>=0.44.0
-lm-format-enforcer>=0.10.11
-lockfile>=0.12.2
-logbar>=0.0.4
-louis>=3.20.0
-lws>=1.2.7
-lxml>=4.9.3
-macaroonbakery>=1.3.1
-Mako>=1.1.3
-Markdown>=3.4.4
-markdown-it-py>=3.0.0
-markdown2>=2.5.3
-MarkupSafe>=2.1.3
-marshmallow>=3.20.1
-matplotlib>=3.10.1
-matplotlib-inline>=0.1.6
-mdurl>=0.1.2
-mistral_common>=1.5.4
-mistune>=3.0.1
-ml_dtypes>=0.5.1
-mock>=4.0.3
-modelscope>=1.25.0
-monotonic>=1.6
-more-itertools>=8.10.0
-moviepy>=2.1.2
-mpmath>=1.3.0
-msgpack>=1.0.5
-msgspec>=0.19.0
-multidict>=6.0.4
-multiprocess>=0.70.16
-murmurhash>=1.0.9
-mypy-extensions>=1.0.0
-namex>=0.0.8
-nbclient>=0.8.0
-nbconvert>=7.8.0
-nbformat>=5.9.2
-nest-asyncio>=1.5.7
-netifaces>=0.11.0
-networkx>=3.1
-ninja>=1.11.1.1
-nltk>=3.8.1
-nmslib>=2.1.1
-notebook>=7.0.3
-notebook_shim>=0.2.3
-numba>=0.61.2
-numexpr>=2.10.2
-numpy>=2.2.5
-oauthlib>=3.2.0
-olefile>=0.46
-ollama>=0.4.7
-omegaconf>=2.3.0
-openai>=1.75.0
-opencensus>=0.11.4
-opencensus-context>=0.1.3
-opencv-contrib-python>=4.8.0.76
-opencv-python>=4.11.0.86
-opencv-python-headless>=4.11.0.86
-openpyxl>=3.1.2
-opentelemetry-api>=1.26.0
-opentelemetry-exporter-otlp>=1.26.0
-opentelemetry-exporter-otlp-proto-common>=1.26.0
-opentelemetry-exporter-otlp-proto-grpc>=1.26.0
-opentelemetry-exporter-otlp-proto-http>=1.26.0
-opentelemetry-proto>=1.26.0
-opentelemetry-sdk>=1.26.0
-opentelemetry-semantic-conventions>=0.47b0
-opentelemetry-semantic-conventions-ai>=0.4.5
-opt_einsum>=3.4.0
-optimum>=1.23.3
-optree>=0.13.0
+beautifulsoup4>=4.13.4
+sentence-transformers>=4.1.0
 ordered-set>=4.1.0
-orjson>=3.10.11
-outlines>=0.1.11
-outlines_core>=0.1.26
-overrides>=7.4.0
-packaging>=25.0
-pandas>=2.2.3
-pandocfilters>=1.5.0
-paramiko>=2.9.3
-parso>=0.8.3
-partial-json-parser>=0.2.1.1.post5
-pathos>=0.3.2
-pathy>=0.10.2
-peft>=0.14.0
-pexpect>=4.8.0
-pickleshare>=0.7.5
-pillow>=10.4.0
-platformdirs>=4.3.6
-pluggy>=1.5.0
-pooch>=1.7.0
-pox>=0.3.5
-ppft>=1.7.6.9
-preshed>=3.0.8
-proglog>=0.1.11
-prometheus-fastapi-instrumentator>=7.1.0
-prometheus_client>=0.21.1
-prompt-toolkit>=3.0.39
-propcache>=0.3.1
-proto-plus>=1.26.1
-protobuf>=4.25.7
-psutil>=5.9.5
-ptyprocess>=0.7.0
-pure-eval>=0.2.2
-py-cpuinfo>=9.0.0
-py-spy>=0.4.0
-pyarrow>=18.0.0
-pyasn1>=0.5.0
-pyasn1-modules>=0.3.0
-pybind11>=2.6.1
-pycairo>=1.20.1
-pycodestyle>=2.13.0
-pycountry>=24.6.1
-pycparser>=2.21
-pycups>=2.0.1
-pydantic>=2.11.4
-pydantic_core>=2.33.2
-pydub>=0.25.1
-pygame>=2.1.0
-Pygments>=2.16.1
-PyGObject>=3.42.1
-PyJWT>=2.3.0
-pyloudnorm>=0.1.1
-pymacaroons>=0.13.0
-PyMySQL>=1.1.0
-PyNaCl>=1.5.0
-pynvml>=12.0.0
-pyparsing>=2.4.7
-pypinyin>=0.49.0
-PyQt5>=5.15.11
-PyQt5-Qt5>=5.15.16
-PyQt5_sip>=12.17.0
-pyRFC3339>=1.1
-pysbd>=0.3.4
-pystoi>=0.4.1
-pytest>=8.3.5
-python-apt>=2.4.0+ubuntu4
-python-dateutil>=2.8.2
-python-debian>=0.1.43+ubuntu1.1
-python-dotenv>=0.19.2
-python-json-logger>=2.0.7
-python-multipart>=0.0.20
-python-pptx>=1.0.2
-python-speech-features>=0.6
-pytz>=2022.1
-pyworld>=0.3.4
-pyxdg>=0.27
-PyYAML>=6.0.2
-pyzmq>=25.1.1
-qtconsole>=5.4.4
-QtPy>=2.4.0
-random_word>=1.0.13
-randomname>=0.2.1
-ray>=2.46.0
-referencing>=0.30.2
-regex>=2023.8.8
-reportlab>=3.6.8
-requests>=2.32.3
-requests-oauthlib>=1.3.1
-requests-toolbelt>=1.0.0
-rfc3339-validator>=0.1.4
-rfc3986-validator>=0.1.1
-rich>=13.9.4
-rich-toolkit>=0.14.4
-rouge>=1.0.1
-rpds-py>=0.10.2
-rsa>=4.9
-ruff>=0.11.7
-s3transfer>=0.12.0
-safehttpx>=0.1.6
-safetensors>=0.5.3
-schema>=0.7.7
-scikit-learn>=1.6.1
-scipy>=1.14.1
-screen-resolution-extra>=0.0.0
-seaborn>=0.13.0
-SecretStorage>=3.3.1
-semantic-version>=2.10.0
-Send2Trash>=1.8.2
-sentence-transformers>=3.3.1
-sentencepiece>=0.2.0
-sentry-sdk>=2.19.2
-setproctitle>=1.3.4
-shellingham>=1.5.4
-shortuuid>=1.0.13
-shtab>=1.7.1
-six>=1.16.0
-smart-open>=6.4.0
-smdebug-rulesconfig>=1.0.1
-smmap>=5.0.1
-sniffio>=1.3.0
-soundfile>=0.13.1
-soupsieve>=2.5
-soxr>=0.5.0.post1
-spacy>=3.8.5
-spacy-legacy>=3.0.12
-spacy-loggers>=1.0.4
-spicy>=0.16.0
-SQLAlchemy>=2.0.20
-srsly>=2.4.7
-ssh-import-id>=5.11
-stack-data>=0.6.2
-starlette>=0.46.2
-swig>=4.1.1.post0
-sympy>=1.13.1
-systemd-python>=234
-tblib>=3.0.0
-tenacity>=8.2.3
-tensorboard>=2.19.0
-tensorboard-data-server>=0.7.1
-tensorflow-io-gcs-filesystem>=0.37.1
-termcolor>=2.5.0
-terminado>=0.17.1
-tf_keras>=2.19.0
-tgt>=1.4.4
-thinc>=8.3.6
-threadpoolctl>=3.6.0
-tiktoken>=0.9.0
-tinycss2>=1.2.1
-tokenicer>=0.0.4
-tokenizers>=0.21.1
-tomli>=2.0.1
-tomlkit>=0.13.2
-torch>=2.6.0
-torch-stoi>=0.2.3
-torchaudio>=2.6.0
-torchvision>=0.21.0
-tornado>=6.3.3
-tqdm>=4.67.0
-traitlets>=5.9.0
-transformers>=4.51.3
-triton>=3.2.0
-trl>=0.13.0
-typeguard>=4.4.1
-typer>=0.15.3
-types-requests>=2.31.0.6
-types-urllib3>=1.26.25.14
-typing-inspect>=0.9.0
-typing-inspection>=0.4.0
-typing_extensions>=4.12.2
-tyro>=0.9.5
-tzdata>=2023.3
-ubuntu-drivers-common>=0.0.0
-ubuntu-pro-client>=8001
-ufw>=0.36.1
-ujson>=5.8.0
-unattended-upgrades>=0.1
-Unidecode>=1.3.6
-uri-template>=1.3.0
-urllib3>=1.26.20
-usb-creator>=0.3.7
-uvicorn>=0.34.2
-uvloop>=0.21.0
-uWSGI>=2.0.22
-vboxapi>=1.0
-virtualenv>=20.31.2
-vllm>=0.8.5.post1
-wadllib>=1.3.6
-wandb>=0.19.1
-wasabi>=1.1.2
-watchfiles>=1.0.5
-wcwidth>=0.2.6
-weasel>=0.4.1
-webcolors>=1.13
-webencodings>=0.5.1
-websocket-client>=1.6.2
-websockets>=15.0.1
-Werkzeug>=3.1.3
-widgetsnbextension>=4.0.8
-wrapt>=1.16.0
-xdg>=5
-xformers>=0.0.29.post2
-xgrammar>=0.1.18
-xkit>=0.0.0
-XlsxWriter>=3.1.3
-xxhash>=3.3.0
-yarl>=1.20.0
-zipp>=1.0.0
+faiss-cpu>=1.11.0
+Flask>=3.1.1
+Flask-Session>=0.8.0
